2018-09-10  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Updated container reference 

2017-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version 

	* R/dt2vw.R (dt2vw): Make a copy of the dataset;
	test for NA values in input data set

2017-03-12  Selim Raboudi  <selim.raboudi@axa.com>

	* R/dt2vw.R (dt2vw): Allow for escaped variable names

2016-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* demo/vw_example_4.R: Added Rborist

2016-08-30  Dirk Eddelbuettel  <edd@debian.org>

	* demo/vw_example_4.R: Added ranger

2016-08-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added

2016-08-23  Dirk Eddelbuettel  <edd@debian.org>

	* demo/vw_example_4.R: Rewritten/extended, now with ctree and gbm

	* demo/vw_example_5.R: Plot predicted vs actual for regression example

	* R/vw.R (vw): Set a AUC fallback value

2016-08-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (License): Use dual license with GPL (>= 2) for my code,
	and BSD 3-clause for existing code

	* NAMESPACE: All importing now via importFrom()

	* demo/vw_example_4.R: Add library(pROC), add a legend to ROC plot
	* demo/00Index: Add vw_example4

	* R/plot.R (plotDensity): add utils::globalVariables() for R CMD check

	* R/dt2vw.R (dt2vw): If dependent variable is numeric, do not
	check factor levels

	* demo/vw_example_5.R: New regression example

2016-08-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Suggests): Added caret (confusion matrix), ggplot2
	and earth (etitanic data)

	* R/vw.R (vw): Steps towards richer return objects, more arguments
	documented, all temp files now in current directory, new option to
	keep files
	* man/vw.Rd: Updated accordingly

	* R/plot.R: New simple density plot function
	* man/plotDensity.Rd: Documentation

	* demo/vw_example_4.R: Now plots ROC curve with (up to) three models

2016-08-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R (.getVW,.getPerf): Helper accessors for vw and perf
	binaries
